--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     {% block content %}
 
     <h2>A Simple Python Web App</h2>
-    <p>Hello Word!!!!!!!, Our Web App is up and running</p>
+    <p>Welcome to L&D Session</p>
 
     {% endblock %}
 
